@@ -138,6 +138,13 @@
      </property>
     </widget>
    </item>
+   <item row="12" column="0">
+    <widget class="QCheckBox" name="rememberLastTab">
+     <property name="text">
+      <string>Remember last tab</string>
+     </property>
+    </widget>
+   </item>
   </layout>
  </widget>
  <resources/>
