@@ -3,6 +3,9 @@
     - Solved problems with some launchers (with %U, %c...) and added support for
       elastic cursor on launch and similar effects.
     - By default, uses the distro specified icon
+    - Added support for remember last tab or not
+    - Added a tooltip to show the complete name of the launchers that , for
+      space reason, can't show their complete name
 
 
 [+] Takeoff v0.1.5 (2011/08/01)
